<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.gangoffive.eculture.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_places"
        android:name="it.gangoffive.eculture.ui.places.PlacesFragment"
        android:label="@string/title_places"
        tools:layout="@layout/fragment_list_tours" />

    <fragment
        android:id="@+id/navigation_tours"
        android:name="it.gangoffive.eculture.ui.tours.ToursFragment"
        android:label="@string/title_tours"
        tools:layout="@layout/fragment_list_tours" />
</navigation>