<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:hint="@string/select_structure">

                    <AutoCompleteTextView
                        android:id="@+id/structures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/structures_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_warning_24"
                    android:text="@string/warning_missing"
                    android:textColor="@color/error"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:hint="@string/title_room">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textImeMultiLine"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/room_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_warning_24"
                    android:text="@string/warning_missing"
                    android:textColor="@color/error"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/visit_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical"
                        android:text="@string/visit_time" />

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:hint="@string/example_minute">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/period"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/min"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp10"
                        android:layout_weight="0"
                        android:gravity="center_vertical"
                        android:text="@string/minutes" />

                </LinearLayout>

                <TextView
                    android:id="@+id/period_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_warning_24"
                    android:text="@string/warning_missing"
                    android:textColor="@color/error"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/description_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_warning_24"
                    android:text="@string/warning_missing"
                    android:textColor="@color/error"
                    android:visibility="gone" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp30"
                android:checked="true"
                android:text="@string/open" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageImported"
                    android:layout_width="@dimen/place_card_image_height"
                    android:layout_height="@dimen/place_card_image_height"

                    android:visibility="gone"
                    app:srcCompat="@drawable/no_image_s" />

                <Button
                    android:id="@+id/select_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_gravity="center"
                    android:text="@string/choose_image" />
            </LinearLayout>

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp30"
                android:layout_marginBottom="@dimen/dp50"
                android:text="@string/add" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
